Added Test Projects, one for UnitTests and one for running actual forms.

--- a/World3D/World3DWindowTests/World3DWindowTests.csproj
+++ b/World3D/World3DWindowTests/World3DWindowTests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1534B438-396D-4BDF-BDF8-1940C000B812}</ProjectGuid>
+    <ProjectGuid>{0B39AEFD-68FB-4AAE-A222-1E8FE45FFB52}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>World3D</RootNamespace>
-    <AssemblyName>World3D</AssemblyName>
+    <RootNamespace>World3DWindowTests</RootNamespace>
+    <AssemblyName>World3DWindowTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -40,7 +40,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,43 +48,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AzElCamera.cs" />
-    <Compile Include="AzElCameraControl.cs" />
-    <Compile Include="Math3D.cs" />
-    <Compile Include="ModelRenderer.cs" />
-    <Compile Include="ModelTypes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShaderProgram.cs" />
-    <Compile Include="Model.cs" />
-    <Compile Include="TextureLoader.cs" />
-    <Compile Include="TriangleEnumerator.cs" />
-    <Compile Include="WorldWindow.cs" />
+    <Compile Include="ShadedObjectTests.cs" />
+    <Compile Include="SimpleWindowTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
-    <None Include="Shaders\fs.glsl">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Shaders\fs_tex.glsl">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Shaders\vs_col.glsl">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Shaders\vs.glsl">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Shaders\vs_tex.glsl">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Textures\opentksquare.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <ProjectReference Include="..\World3D\World3D.csproj">
+      <Project>{1534b438-396d-4bdf-bdf8-1940c000b812}</Project>
+      <Name>World3D</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
