--- a/World3D/World3DWindowTests/World3DWindowTests.csproj
+++ b/World3D/World3DWindowTests/World3DWindowTests.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShadedObjectTests.cs" />
     <Compile Include="SimpleWindowTests.cs" />
+    <Compile Include="UserInterfaceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
