--- a/World3D/World3DTests/World3DTests.csproj
+++ b/World3D/World3DTests/World3DTests.csproj
@@ -55,6 +55,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AzElCameraTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TriangleEnumeratorTests.cs" />
   </ItemGroup>
