--- a/World3D/World3D/World3D.csproj
+++ b/World3D/World3D/World3D.csproj
@@ -53,12 +53,12 @@
     <Compile Include="AzElCameraControl.cs" />
     <Compile Include="Math3D.cs" />
     <Compile Include="ModelRenderer.cs" />
-    <Compile Include="ModelTypes.cs" />
+    <Compile Include="Models\ModelTypes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShaderProgram.cs" />
-    <Compile Include="Model.cs" />
-    <Compile Include="Square.cs" />
+    <Compile Include="Models\Model.cs" />
+    <Compile Include="Models\Square.cs" />
     <Compile Include="TextureLoader.cs" />
     <Compile Include="TriangleEnumerator.cs" />
     <Compile Include="UserInterfaceModel.cs" />
