--- a/World3D/World3DTests/World3DTests.csproj
+++ b/World3D/World3DTests/World3DTests.csproj
@@ -56,6 +56,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AzElCameraTests.cs" />
+    <Compile Include="Models\SquareGridTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TriangleEnumeratorTests.cs" />
   </ItemGroup>
