--- a/World3D/World3DTests/World3DTests.csproj
+++ b/World3D/World3DTests/World3DTests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Models\SquareGridTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TriangleEnumeratorTests.cs" />
+    <Compile Include="VectorAssertions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\World3D\World3D.csproj">
