--- a/World3D/World3D/World3D.csproj
+++ b/World3D/World3D/World3D.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ModelRenderer.cs" />
     <Compile Include="Models\ModelTypes.cs" />
     <Compile Include="Models\SquareGrid.cs" />
+    <Compile Include="Models\Terrain.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShaderProgram.cs" />
