--- a/World3D/World3DTests/World3DTests.csproj
+++ b/World3D/World3DTests/World3DTests.csproj
@@ -56,7 +56,9 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AzElCameraTests.cs" />
+    <Compile Include="Models\EarthConverterTests.cs" />
     <Compile Include="Models\SquareGridTests.cs" />
+    <Compile Include="Models\TerrainTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TriangleEnumeratorTests.cs" />
     <Compile Include="VectorAssertions.cs" />
