Now reading actual SRTM3 files. Added SRTM3 file for Auckland, NZ for testing.

--- a/World3D/World3D/World3D.csproj
+++ b/World3D/World3D/World3D.csproj
@@ -92,6 +92,9 @@
     <None Include="Shaders\vs_tex.glsl">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="WebGIS_SRTM3\S37E174.hgt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Textures\opentksquare.png">
