Cloned at home. Minor updates.

--- a/World3D/World3D/World3D.csproj
+++ b/World3D/World3D/World3D.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Srtm3Reader.cs" />
     <Compile Include="TextureLoader.cs" />
     <Compile Include="Models\TriangleEnumerator.cs" />
-    <Compile Include="UserInterfaceModel.cs" />
+    <Compile Include="Models\UserInterfaceModel.cs" />
     <Compile Include="WorldWindow.cs" />
   </ItemGroup>
   <ItemGroup>
